[gd_scene load_steps=2 format=3 uid="uid://dpai5ysywgbv2"]

[ext_resource type="Script" path="res://input_manager.gd" id="1_jfcg8"]

[node name="TextEdit" type="TextEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
editable = false
scroll_smooth = true
script = ExtResource("1_jfcg8")

[connection signal="gameplay_input" from="." to="." method="_on_gameplay_input"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
